@@ -3,6 +3,7 @@ Aug 17 2005  devel  Started implementing server protocol generic caching to
                      struct
                     Began enabling netracker NETWORK protocol
                     Finished netracker NETWORK protocol rewrite
+                    Finished netracker CLIENT protocol rewrite
 Aug 14 2005  devel  Added tun/tap virtual interface support for sharing packets
                     Added patches/ dir and linux kernel patch for tuntap
                     Fixed stupid timing inversion on channel hop
